[package]
name = "sun_haven_toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
csv = "1.3.0"
serde = {version = "1.0.193"}
serde_json = {version = "1.0.108"}
tera = {version = "1.19.1", default-features = false}

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
